# cg-seminar-2023

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pysdf-test.py
models/: lantern.mtl  lantern.stl  pyramid.stl  sphere.stl
src/: evaluate.py  load_mesh.py  main.cpp  py_util.hpp  test_method.hpp  testing_pipeline.cpp  testing_pipeline.hpp  triangle_mesh.hpp
src/methods/: marching_cubes.hpp  marching_cubes.py  reach_for_the_spheres.hpp  reach_for_the_spheres.py
src/util_cuda/: edge_pt.cu  util_cuda.hpp
